# resolve-mcp

./: .gitignore  README.md  pyproject.toml
src/resolve_claude_mcp/: server.py  transcription.py
src/resolve_mcp/: connection.py  resolve_utils.py  server.py
