[project]
name = "resolve-mcp"
version = "0.1.0"
description = "DaVinci Resolve Studio integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.optional-dependencies]
transcription = [
    "mlx-whisper>=0.4.3",
]

[project.scripts]
resolve-mcp = "resolve_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
