[project]
name = "resolve-mcp"
version = "0.1.0"
description = "DaVinci Resolve Studio integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.3.0",
    # macOS-only: used by the screenshot tool to target the Resolve window.
    # On other platforms the screenshot tool is unavailable; it's fine that
    # this isn't installed.
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
# macOS / Apple Silicon only — mlx-whisper does not build on other platforms.
transcription = [
    "mlx-whisper>=0.4.3; sys_platform == 'darwin'",
]

[project.scripts]
resolve-mcp = "resolve_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
